--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "normalize.css": "^8.0.1",
+    "vant": "^4.0.11",
     "vue": "^3.2.47"
   },
   "devDependencies": {
@@ -18,7 +19,12 @@
     "@vitejs/plugin-vue": "^4.0.0",
     "cz-git": "^1.5.0",
     "czg": "^1.5.0",
-    "vite": "^4.1.4"
+    "pinia": "^2.0.32",
+    "sass": "^1.58.3",
+    "scss": "^0.2.4",
+    "unplugin-vue-components": "^0.24.0",
+    "vite": "^4.1.4",
+    "vue-router": "^4.1.6"
   },
   "config": {
     "commitizen": {
