--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "cz": "czg"
   },
   "dependencies": {
+    "axios": "^1.3.4",
     "normalize.css": "^8.0.1",
     "vant": "^4.0.11",
     "vue": "^3.2.47"
