--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "axios": "^1.3.4",
     "dayjs": "^1.11.7",
     "normalize.css": "^8.0.1",
+    "underscore": "^1.13.6",
     "vant": "^4.0.11",
     "vue": "^3.2.47"
   },
